<resources>
    <string name="exitshow">确定退出么？</string><string name="app_name">苏州文化艺术中心</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    
    <!-- foot content -->
    <string name="str_home">首页</string>
    <string name="str_vip">贵宾卡专区</string>
    <string name="str_news">每月艺讯</string>
    <string name="str_map">交通信息</string>
    <string name="str_more">更多</string>
    <string name="str_yetai">业态</string>
    <string name="str_search">搜索</string>
    <!-- 首页的字符串 -->
    <string name="str_navgate">栏目</string>
    <string name="str_home_title">苏州文化艺术中心</string>
    <string name="str_home_yanchu">演出</string>
    <string name="str_home_dianying">电影</string>
    <string name="str_home_huizhan">会展</string>
    <string name="str_home_suyipeixun">苏艺培训</string>
    <string name="str_home_jinjihu">金鸡湖美术馆</string>
    <string name="str_home_jinjihu2">艺坛</string>
    <string name="str_fram_yitan">金鸡湖艺坛</string>
    <string name="copyright">苏州文化博览中心有限公司 版权所有</string>
    <string name="swipe">swipe from left to right</string>
    
    <string name="str_theatre">演出</string>
    <string name="str_theatre_info">演出资讯</string>
    <string name="str_theatre_item1">演出类型:</string>
    <string name="str_theatre_item2">演出时间:</string>
    <string name="str_theatre_item3">演出票价:</string>
    <string name="str_theatre_dail">电话订票</string>
    <string name="str_theatre_company">出品公司:</string>
    
    <string name="str_theatre_activie">剧院活动</string>
    <string name="str_theatre_activie_effect_time">开始时间:</string>
    <string name="str_theatre_activie_introduce">活动介绍</string>
    <string name="str_theatre_detail_info">演出详情</string>
    
    <string name="str_theatre_report">艺文周刊</string>
    
    <string name="str_yitan_yskt">艺术课堂</string>
    <string name="str_yitan_ywzk">艺文活动</string>
    
    
    <string name="str_film_city">电影</string>
    <string name="str_film_paipian">排片信息</string>
    <string name="str_film_desc">影片介绍</string>
    <string name="str_film_detail_buy">购票</string>
    
    <string name="str_film">影片</string>
    <string name="str_yingyuan">排片</string>
     <string name="str_yingyuan_detail">影院详情</string>
    <string name="str_huodong">活动</string>
    <string name="str_huodong_detail">活动详情</string>
    
    <string name="str_show_detail">会展详情</string>
    
    <string name="str_huizhan">会展</string>
    <string name="str_huizhan_address">展馆:</string>
    <string name="str_huizhan_time">时间:</string>
    <string name="str_huizhan_zhuban">主办:</string>
    <string name="str_huizhan_phone">热线:</string>
    <string name="str_huizhan_desc">展馆简介:</string>
    <string name="str_huizhan_member">参展商:</string>
    <string name="str_huizhan_pingmiantu">展会平面图:</string>
    
    <string name="str_login_number">登陆账号</string>
    <string name="str_check_remount">余额查询</string>
    <string name="str_check_jifen">积分查询</string>
    <string name="str_account_chongzhi">账户充值</string>
    
    <string name="str_vip_area">贵宾卡专区</string>
    <string name="str_vip_shenqing">贵宾卡在线申请</string>
    <string name="str_vip_chongzhi">贵宾卡在线充值</string>
    <string name="str_vip_center">贵宾卡中心</string>
    <string name="str_vip_zongze">贵宾卡总则</string>
    <string name="str_vip_youhui">我的优惠</string>
    
    
    <string name="str_about">关于苏艺</string>
    <string name="str_system_set">系统设置</string>
    <string name="str_more_map">交通信息</string>
    <string name="str_more_contact">联系我们</string>
    <string name="str_more_version">版本信息</string>
    <string name="str_more_zhoubian">周边信息</string>
    
    
	<string name="loading">loading...</string>
	<string name="load_more">正在为您加载下一页...</string>
	
	
	<!-- map -->
	<string name="str_busline">公交线路：</string>
    <string name="str_busline_content">100、106、108、120、129、156、206、215、219、258、2、47、812、夜2路、快线2号</string>
	<!-- sina weibo -->
	<string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
    <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    <string name="weibosdk_comment">评论</string>
    <string name="weibosdk_forward">转发</string>
    <string name="weibosdk_fav">收藏</string>
    <string name="testcontent"></string>
    <string name="post_weibo">发送微博</string>
    <string name="nearbypeople">周边的人</string>
    <string name="nearbyweibo">周边的微博</string>
    <string name="userinfo">个人资料</string>
    <string name="pageinfo">位置(page)介绍面</string>
    <string name="pageproductlist">图书(page)产品列表</string>
    <string name="pageuserlist">位置用户列表</string>
    <string name="pageweibolist">位置微博列表</string>
    <string name="pagephotolist">位置图片列表</string>
    <string name="pagedetailinfo">位置详细资料页</string>
    <string name="usertrends">话题列表</string>
    <string name="weibobrowser">内置浏览器打开</string>
    <string name="weibomap">地图页面</string>
    <string name="nearphotolist">xy周边热图</string>
    <string name="poiphotolist">poi周边热图</string>
    <string name="poipage">POI页面</string>
    <string name="mblogdetail">查看微博正文</string>
    <string name="qrcode">扫描二维码界面</string>
	<string name="auth">OAUTH2.0获取Token</string>
	<string name="code">OAUTH2.0获取Code</string>
	<string name="sso">单点登录sso</string>
	<string name="apiCancel">注销用户</string>
	<string name="checkinternet">无法联系网络，请检查网络配置</string>
	<string name="hello_world">微博SDK入口</string>
	
</resources>