<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="0dp"
	android:background="@drawable/tabbar"
	>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearHOme"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/icon_home"
					android:layout_weight="2"
					android:id="@+id/imageHome" 
					android:padding="10px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent"
					android:scaleType="centerInside"
					>
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_home" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearYetai"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/icon_yetai"
					android:layout_weight="2"
					android:id="@+id/imageMap" 
					android:padding="10px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_yetai" 
					style="@style/footer_text" 
					/>
	</LinearLayout>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearVip"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/icon_vip"
					android:layout_weight="2"
					android:id="@+id/imageVip" 
					android:padding="10px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_vip" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearSearch"
					android:background="@drawable/selector_blue_to_red"
					
					>
		<ImageView 	android:src="@drawable/icon_search"
					android:layout_weight="2"
					android:id="@+id/imageNews" 
					android:padding="10px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_search" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearMore"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/icon_more"
					android:layout_weight="2"
					android:id="@+id/imageMore" 
					android:padding="10px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_more" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	
</LinearLayout>
