<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    
  <include 		android:id="@+id/headerOfTheatreDetail"
      			layout="@layout/header_theatre_detail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				/>   
 <ScrollView 
     			android:layout_width="fill_parent"
     			android:layout_height="fill_parent"
     			android:background="#FFFFFF"
     			android:layout_below="@id/headerOfTheatreDetail"
     			>
     
 <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" 
			    android:background="#FFFFFF"
			    > 
     		<LinearLayout 
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:orientation="horizontal" 
					    android:background="@drawable/bg_yanchu_detail"
					    android:baselineAligned="false"
					    > 
					    <LinearLayout 
								    android:layout_width="fill_parent"
								    android:layout_height="wrap_content"
								    android:orientation="horizontal" 
								    android:baselineAligned="false"
								    > 
				    		<ImageView 
				    		    		android:id="@+id/imageOfTheatreDetail"
				    		    		android:layout_width="fill_parent"
				    		    		android:layout_height="fill_parent"
				    		    		android:scaleType="fitXY"
				    		    		android:src="@drawable/back_home"
				    		    		android:layout_margin="5dp"
				    		    		android:layout_weight="2"
				    		    		/>
	   				 <LinearLayout 
						    android:layout_width="fill_parent"
						    android:layout_height="wrap_content"
						    android:orientation="vertical" 
						    android:layout_weight="1"
						    android:padding="5dp"
						    > 
				    		<TextView 	
								 		  android:id="@+id/textTitleOfTheatreDetail"
								 		  android:layout_width="wrap_content"
								 		  android:layout_height="wrap_content"
								 		  android:padding="1dp"
								 		   android:text="@string/loading"
								 		   style="@style/yanchu_detail_title"
								 		   />
	
	     		
	     					<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_theatre_item1"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textTypeOfTheatreDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		
					 		<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_theatre_item2"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textTimeOfTheatreDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		
					 		<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_theatre_item3"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textPriceOfTheatreDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		
					 		<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_theatre_company"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textCompanyOfTheatreDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		
					 		<Button 	
					 		    	android:id="@+id/btnBuyOfFilmDetail"
					 		    	android:layout_width="100dp"
					 		    	android:layout_height="50dp"
					 		    	android:text="@string/str_theatre_dail"
					 		    	android:background="@drawable/selector_btn_buy"
					 		    	android:layout_marginTop="15dp"
					 		    	android:padding="5dp"
					 		    	android:textSize="15sp"
					 		    	/>
	   				</LinearLayout>
	   			</LinearLayout>
   			</LinearLayout>
   			
   			<LinearLayout 
   			    			android:layout_width="fill_parent"
   			    			android:layout_height="wrap_content"
   			    			android:background="@drawable/iphone_divider_line"	
   			    			android:layout_marginTop="0dp"
   			    			>
   			    	<TextView 
   			    	    		android:layout_width="wrap_content"
   			    	    		android:layout_height="wrap_content"
   			    	    		android:layout_marginLeft="20dp"
   			    	    		android:text="@string/str_film_desc"
   			    	    		android:background="#FFFFFF"
   			    	    		/>
   			</LinearLayout>
   			<WebView 
   			    		android:layout_width="fill_parent"
   			    		android:layout_height="wrap_content"
   			    		android:scrollbars="none"
   			    		android:id="@+id/webviewOfTheatreDetail"
   			    		/>
   </LinearLayout>
  </ScrollView>
</RelativeLayout>
