<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    
  <include 		android:id="@+id/headerOfHuiZhanDetail"
      			layout="@layout/header_show_detail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				/>   
 <ScrollView 
     			android:layout_width="fill_parent"
     			android:layout_height="fill_parent"
     			android:background="#FFFFFF"
     			android:layout_below="@id/headerOfHuiZhanDetail"
     			>
     
 <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="0dp"
			    android:orientation="vertical" 
			    android:background="#FFFFFF"
			    > 
     		<LinearLayout 
					    android:layout_width="fill_parent"
					    android:layout_height="150dp"
					    android:orientation="horizontal" 
					    android:background="@drawable/bg_yanchu_detail"
					    android:baselineAligned="false"
					    android:paddingBottom="10dp"
					    > 
	     		    <LinearLayout 
						    android:layout_width="fill_parent"
						    android:layout_height="fill_parent"
						    android:orientation="vertical" 
						    android:layout_weight="2"
						    android:gravity="center_vertical"
						    > 
				    		<ImageView 
				    		    		android:id="@+id/imageOfHuiZhanDetail"
				    		    		android:layout_width="fill_parent"
				    		    		android:layout_height="fill_parent"
				    		    		android:scaleType="fitXY"
				    		    		android:src="@drawable/back_home"
				    		    		android:layout_margin="5dp"
				    		    		/>
	     		
	   				</LinearLayout>
	   				 <LinearLayout 
						    android:layout_width="fill_parent"
						    android:layout_height="fill_parent"
						    android:orientation="vertical" 
						    android:layout_weight="1"
						    android:padding="10dp"
						    > 
				    		<TextView 	
								 		  android:id="@+id/textTitleOfHuizhanDetail"
								 		  android:layout_width="wrap_content"
								 		  android:layout_height="wrap_content"
								 		  android:padding="1dp"
								 		   android:text="@string/loading"
								 		   style="@style/yanchu_detail_title"
								 		   />
	     		
					 		<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_huizhan_time"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textTimeOfHuizhanDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		
					 		<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_huizhan_address"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textAddressOfHuizhanDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_huizhan_zhuban"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textzhubanOfHuizhanDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		<LinearLayout 
					 		    		android:layout_width="fill_parent"
					 		    		android:layout_height="wrap_content"
					 		    		android:orientation="horizontal"	
					 		    		>
					 		    <TextView 	
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/str_huizhan_phone"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 			<TextView 	
					 		    		android:id="@+id/textPhoneOfHuizhanDetail"
					 		    		android:layout_width="wrap_content"
					 		    		android:layout_height="wrap_content"
					 		    		android:text="@string/loading"
					 		    		style="@style/yanchu_detail_text"
					 		    		/>
					 		</LinearLayout>
					 		
					 		
	   				</LinearLayout>
   			</LinearLayout>
   			
   			<LinearLayout 
   			    			android:layout_width="fill_parent"
   			    			android:layout_height="wrap_content"
   			    			android:background="@drawable/iphone_divider_line"	
   			    			android:layout_marginTop="0dp"
   			    			>
   			    	<TextView 
   			    	    		android:layout_width="wrap_content"
   			    	    		android:layout_height="wrap_content"
   			    	    		android:layout_marginLeft="20dp"
   			    	    		android:text="@string/str_huizhan_desc"
   			    	    		android:background="#FFFFFF"
   			    	    		/>
   			</LinearLayout>
   			<WebView 
   			    		android:layout_width="fill_parent"
   			    		android:layout_height="wrap_content"
   			    		android:scrollbars="none"
   			    		android:id="@+id/webviewOfHuizhanDetail"
   			    		/>
   			<LinearLayout 
   			    			android:layout_width="fill_parent"
   			    			android:layout_height="wrap_content"
   			    			android:background="@drawable/iphone_divider_line"	
   			    			android:layout_marginTop="0dp"
   			    			>
   			    	<TextView 
   			    	    		android:layout_width="wrap_content"
   			    	    		android:layout_height="wrap_content"
   			    	    		android:layout_marginLeft="20dp"
   			    	    		android:text="@string/str_huizhan_member"
   			    	    		android:background="#FFFFFF"
   			    	    		/>
   			</LinearLayout>
   			
   			<TextView 
   			    		android:layout_width="fill_parent"
   			    		android:layout_height="wrap_content"
   			    		android:padding="10dp"
   			    		android:id="@+id/textmemberOfHuiZhanDetail"
   			    		/>
   			<LinearLayout 
   			    			android:layout_width="fill_parent"
   			    			android:layout_height="wrap_content"
   			    			android:background="@drawable/iphone_divider_line"	
   			    			android:layout_marginTop="0dp"
   			    			>
   			    	<TextView 
   			    	    		android:layout_width="wrap_content"
   			    	    		android:layout_height="wrap_content"
   			    	    		android:layout_marginLeft="20dp"
   			    	    		android:text="@string/str_huizhan_pingmiantu"
   			    	    		android:background="#FFFFFF"
   			    	    		/>
   			</LinearLayout>
   			<ImageView 
   			    		android:layout_width="fill_parent"
   			    		android:layout_height="wrap_content"
   			    		android:id="@+id/imagePMTOfHuiZhanDetail"
   			    		android:scaleType="fitXY"
   			    		/>
   </LinearLayout>
  </ScrollView>
</RelativeLayout>
